--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "themes/hello-friend"]
 	path = themes/hello-friend
 	url = https://github.com/musq/hugo-theme-hello-friend.git
+[submodule "public"]
+	path = public
+	url = git@github.com:musq/musq.github.io.git
+	branch = master
