--- a/config.toml
+++ b/config.toml
@@ -9,7 +9,7 @@ paginate = 10
   # "light" or "dark"
   defaultTheme = "light"
   # if you set this to 0, only submenu trigger will be visible
-  showMenuItems = 2
+  showMenuItems = 1
   # Enable to show reading time in minutes for posts
   showReadingTime = true
 
@@ -19,7 +19,7 @@ paginate = 10
     subtitle = ""
     keywords = ""
     copyright = ""
-    menuMore = "Show more"
+    menuMore = "More"
     writtenBy = "Written by"
     readMore = "Read more"
     readOtherPosts = "Read other posts"
@@ -42,6 +42,10 @@ paginate = 10
         identifier = "about"
         name = "About"
         url = "/about"
+      [[languages.en.menu.main]]
+        identifier = "archive"
+        name = "Archive"
+        url = "/archive"
       # [[languages.en.menu.main]]
       #   identifier = "showcase"
       #   name = "Showcase"
