--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -3,6 +3,10 @@ languageCode = "en-us"
 theme = "hugo-theme-hello-friend"
 paginate = 5
 
+[caches]
+  [caches.assets]
+    maxAge = "600h"
+
 [languages]
   [languages.en]
     title = "The sound of musq"
