--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -32,11 +32,19 @@ paginate = 5
         identifier = "about"
         name = "About"
         url = "/about"
+        weight = 1
+      [[languages.en.menu.main]]
+        identifier = "tags"
+        name = "Tags"
+        url = "/tags"
+        weight = 2
       [[languages.en.menu.main]]
         identifier = "archive"
         name = "Archive"
         url = "/archive"
+        weight = 3
       [[languages.en.menu.main]]
         identifier = "telegram"
         name = "Telegram"
         url = "/telegram"
+        weight = 4
