--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ title: the sound of musq
 author: Ashish Ranjan
 description: This website supports software freedom.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://tug.ro" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Social
 github_username: musq
