--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author: Ashish Ranjan
 email: "*myfirstname*@tug.ro"
 description: This website supports software freedom.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://tug.ro" # the base hostname & protocol for your site, e.g. http://example.com
+url: "tug.ro" # only use the base hostname, don't specify the protocol
 
 # Social
 github_username: musq
